--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,14 @@
+
 spring:
   datasource:
-    url:jdbc:mysql://localhost:3306/vendor
-    username:root
-    password:sokar
-
-
-  #JPA
-  jpa.hibernate.ddl.auto: create
+    url: jdbc:postgresql://localhost:5432/learning
+    username: postgres
+    password: sokar
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
