--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,15 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.16</version>
 		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
